# modern-cmake-for-cpp

chapter01/01-hello/: CMakeLists.txt
chapter01/03-script/: README.md  script.cmake
chapter01/04-module/: CMakeLists.txt
chapter02/01-arguments/: bracket.cmake  quoted.cmake  unquoted.cmake
chapter02/02-variable/: reference.cmake  set.cmake
chapter02/03-environment/: CMakeLists.txt  README.md  build.sh  environment.cmake
chapter02/04-cache/: README.md
chapter02/04-cache/a-cache-definition/: CMakeLists.txt
chapter02/04-cache/b-cache-application/: CMakeLists.txt
chapter02/04-cache/b-cache-application/cmake/: test_include_cache.cmake
chapter02/04-cache/b-cache-application/src/: CMakeLists.txt
chapter02/04-cache/c-cache-normal-exchange/: CMakeLists.txt
chapter02/05-scope/: CMakeLists.txt
chapter02/06-list/: REAME.md  list.cmake
chapter02/07-conditional/: README.md  conditional.cmake  conditional_check.cmake  conditional_compare.cmake  conditional_constant.cmake  conditional_string.cmake  conditional_variable.cmake
chapter02/08-loops/: foreach.cmake
chapter02/09-definitions/: README.md  function.cmake  macro.cmake  macro_vs_function_1.cmake  macro_vs_function_2.cmake  macro_vs_function_3.cmake  macro_vs_function_4.cmake
chapter02/10-procedural/: CMakeLists.txt
chapter02/11-useful/: CMakeLists.txt  message_fatal_error.cmake  message_others.cmake
chapter02/11-useful/file/: README.md
chapter02/11-useful/include/: README.md
chapter02/11-useful/include/cmake/: test.cmake
chapter02/11-useful/include/style1/: CMakeLists.txt
chapter02/11-useful/include/style2/: CMakeLists.txt
chapter02/11-useful/include_guard/: CMakeLists.txt  README.md
chapter02/11-useful/include_guard/cmake/: custom.cmake
chapter02/11-useful/message/: message_context.cmake  message_indent.cmake  message_send_error.cmake
